drm/openchrome: Move FBDEV code into openchrome_fbdev.c
Signed-off-by: Kevin Brace <kevinbrace@gmx.com>

--- a/drivers/gpu/drm/openchrome/Makefile
+++ b/drivers/gpu/drm/openchrome/Makefile
@@ -12,6 +12,7 @@ openchrome-y := openchrome_analog.o \
 		openchrome_drv.o \
 		openchrome_encoder.o \
 		openchrome_fb.o \
+		openchrome_fbdev.o \
 		openchrome_fp.o \
 		openchrome_hdmi.o \
 		openchrome_i2c.o \
